# FullySNNforLeggedRobots

./: LICENSE  README.md
AMP/AMP_for_hardware-main/: README.md
AMP/AMP_for_hardware-main/.github/ISSUE_TEMPLATE/: bug_report.md
AMP/AMP_for_hardware-main/datasets/hopturn/: hopturn.txt
AMP/AMP_for_hardware-main/legged_gym/envs/: __init__.py
AMP/AMP_for_hardware-main/legged_gym/envs/a1/: a1_amp_config.py
AMP/AMP_for_hardware-main/legged_gym/envs/base/: legged_robot_config.py
AMP/AMP_for_hardware-main/legged_gym/scripts/: play.py
AMP/AMP_for_hardware-main/legged_gym/utils/: helpers.py  task_registry.py
AMP/AMP_for_hardware-main/rsl_rl/rsl_rl/algorithms/: amp_ppo.py
AMP/AMP_for_hardware-main/rsl_rl/rsl_rl/datasets/: motion_loader.py
AMP/AMP_for_hardware-main/rsl_rl/rsl_rl/modules/: actor_critic.py
AMP/AMP_for_hardware-main/rsl_rl/rsl_rl/runners/: amp_on_policy_runner.py
CASSIE/legged_gym-master/legged_gym.egg-info/: PKG-INFO
CASSIE/legged_gym-master/legged_gym/envs/base/: legged_robot_config.py
CASSIE/legged_gym-master/legged_gym/envs/cassie/: cassie_config.py
CASSIE/rsl_rl-master/rsl_rl/algorithms/: ppo.py
CASSIE/rsl_rl-master/rsl_rl/modules/: actor_critic.py
CASSIE/rsl_rl-master/rsl_rl/runners/: on_policy_runner.py
HUMANOID/pbrs-humanoid-dev/gpu_rl/rsl_rl/modules/: actor_critic.py
HUMANOID/pbrs-humanoid-dev/gpu_rl/rsl_rl/runners/: on_policy_runner.py
HUMANOID/pbrs-humanoid-dev/resources/robots/mit_humanoid/: mit_humanoid_fixed_arms.urdf
RMA/quadruped-robot-master/legged-ego-planner/: README.md
RMA/quadruped-robot-master/legged-ego-planner/src/ego_planner/: bag_record.sh  check_bat.sh  default.rviz  mavros_bridge.sh  run.sh  takeoff.sh  vins_run.sh
RMA/quadruped-robot-master/legged-ego-planner/src/ego_planner/scrips/: io_speed_test.sh  max_cpu_freq.sh  max_emc_freq.sh  set_gpu_max.sh
RMA/quadruped-robot-master/legged-ego-planner/src/legged_real/: CMakeLists.txt  package.xml
RMA/quadruped-robot-master/legged-ego-planner/src/legged_real/launch/: trace.launch
RMA/quadruped-robot-master/legged-ego-planner/src/legged_real/src/: trace.cpp
RMA/quadruped-robot-master/model-control/: README.md
RMA/quadruped-robot-master/model-control/quadruped/config/a1/: a1_robot.yaml  openloop_gait_generator.yaml
RMA/quadruped-robot-master/model-control/quadruped/config/a1_sim/: a1_sim.yaml  openloop_gait_generator.yaml
RMA/quadruped-robot-master/rl-robotics/: .gitignore  LICENSE  README.md  config_package_path.sh  rl-robotics-env.yaml
RMA/quadruped-robot-master/rl-robotics/acllite/: acllite_imageproc.py  acllite_resource.py  videocapture.py
RMA/quadruped-robot-master/rl-robotics/legged_gym/: LICENSE
RMA/quadruped-robot-master/rl-robotics/legged_gym/legged_gym/envs/a1/a1_real/unitree_legged_sdk/: CMakeLists.txt
RMA/quadruped-robot-master/rl-robotics/legged_gym/legged_gym/envs/lite3/lite3_real/deeprobotics_legged_sdk/: CMakeLists.txt  main.cpp  package.xml  python_interface.cpp  test_python_interface.py
RMA/quadruped-robot-master/rl-robotics/legged_gym/legged_gym/envs/lite3/lite3_real/deeprobotics_legged_sdk/include/deeprobotics_legged_sdk/: motionexample.h  robot_types.h  send_to_robot.h
RMA/quadruped-robot-master/rl-robotics/legged_gym/legged_gym/envs/lite3/lite3_real/deeprobotics_legged_sdk/src/: motionexample.cpp  robot_types.cpp  send_to_robot.cpp
RMA/quadruped-robot-master/rl-robotics/rsl_rl/: LICENSE
(+101 files in other folders)
