<?xml version="1.0"?>
<package format="2">
  <name>legged_real</name>
  <version>0.0.0</version>
  <description>The legged_real package</description>

  <maintainer email="afr_henrylsy@163.com">ysc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>eigen</depend>

</package>